# sql-in-cpp

./: CMakeLists.txt  COPYING.md  FILESTRUCTURE.md  LICENSE.md  README.md  TODO.md
.github/workflows/: ci.yml
app/: CMakeLists.txt  sql-in-cpp_app.cpp
doc/: CMakeLists.txt  conf.py  index.rst
include/sql-in-cpp/: sql-in-cpp.hpp
src/: CMakeLists.txt  sql-in-cpp.cpp
tests/: CMakeLists.txt  sql-in-cpp_t.cpp
